add asynq to send verify email
