# doc/swagger/simple_bank.swagger.json
@@ -6,7 +6,7 @@
     "contact": {
       "name": "Dung Nguyen",
       "url": "https://github.com/Dungnv2290/simple_bank.git",
-      "email": "vandung2290@gmil.com"
+      "email": "vandung2290@gmail.com"
     }
   },
   "tags": [
@@ -122,6 +122,45 @@
           "Simplebank"
         ]
       }
+    },
+    "/v1/verify_email": {
+      "get": {
+        "summary": "Verify email",
+        "description": "Use this API to verify user's email address",
+        "operationId": "Simplebank_VerifyEmail",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbVerifyEmailResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "emailId",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "secretCode",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Simplebank"
+        ]
+      }
     }
   },
   "definitions": {
@@ -230,6 +269,14 @@
         "createdAt": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "pbVerifyEmailResponse": {
+      "type": "object",
+      "properties": {
+        "isVerified": {
+          "type": "boolean"
         }
       }
     },
